Añadido del enpoint http://localhost:8080/api/task/list/(id de la lista)